<resources>
    <string name="app_name">ToDo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_tasks">Мои дела</string>
    <string name="done">Выполнено - %1$d</string>
    <string name="no">Нет</string>
    <string name="low">Низкий</string>
    <string name="high">!! Высокий</string>
    <string name="select_date">Выберите дату</string>
    <string name="save">Сохранить</string>
    <string name="edit_text">Что надо сделать...</string>
    <string name="importance">Важность</string>
    <string name="make_up_to">Сделать до</string>
    <string name="text">Text</string>
</resources>