<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_task"
    android:name="com.example.todoapp.AddTaskFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.fragments.TaskFragment"
    tools:layout="@layout/fragment_task">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_fragmentTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/Widget.AppCompat.Toolbar">

            <ImageButton
                android:id="@+id/imageButton_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/close" />

            <TextView
                android:id="@+id/textView_download"
                style="@style/TextViewBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:text="@string/save" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_fragmentTask"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/back_primary"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="?attr/colorSecondary"
                android:backgroundTint="?attr/colorSecondary"
                app:cardCornerRadius="10dp"
                app:cardPreventCornerOverlap="true"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/editText_enterTask"
                    style="@style/EditText"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:focusable="true"
                    android:gravity="top"
                    android:hint="@string/edit_text"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:minLines="1"
                    android:singleLine="false">
                </EditText>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/linearLayout_importance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackground"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_importanceTitle"
                    style="@style/Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/importance"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView_importanceText"
                    style="@style/BodySubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/no"
                    tools:ignore="MissingConstraints" />
            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/colorPrimaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">

            </View>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp">

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:theme="@style/BrandedSwitch.control">

                </androidx.appcompat.widget.SwitchCompat>

                <TextView
                    android:id="@+id/DoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/make_up_to"
                    style="@style/Body"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView_date"
                    style="@style/TextViewBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/DoTextView"
                    app:layout_constraintTop_toBottomOf="@+id/DoTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="35dp"
                android:background="?attr/colorPrimaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="MissingConstraints">

            </View>

            <TextView
                android:id="@+id/DeleteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:background="?attr/selectableItemBackground"
                android:drawableStart="@drawable/delete"
                android:text="     Удалить"
                android:textColor="@color/label_tertiary"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>